--- a/pages/store/store.wxss
+++ b/pages/store/store.wxss
@@ -77,3 +77,12 @@ page{
 
 
 /***************抽屉*/
+
+
+.footer{
+    	position: fixed;
+	width: 100%;
+	bottom: 0;
+	z-index: 1024;
+	box-shadow: 0 -1rpx 6rpx rgba(0, 0, 0, 0.1);
+}
