--- a/pages/store/store.wxml
+++ b/pages/store/store.wxml
@@ -105,23 +105,30 @@
 
     <!-- 领卡后显示，组队提示  -->
     <view class="padding-lr margin-top-xs"  wx:if="{{isHasDiscountCard}}">
-        <view class="bg-yellow pg-radius ">
+        <view class="bg-yellow pg-radius flex justify-between align-center">
             <view class="padding-lr padding-top padding-bottom-sm flex justify-between align-center " >
-                <view>
-                    <!-- <image src="/images/pin1.png" class="cu-avatar bg-yellow sm" ></image> -->
+                <view >
                     <text class="cuIcon-title text-white  text-xs"></text>
+                    <!-- <view class="cu-avatar-group">
+                        <image class="cu-avatar round block" wx:for="{{1}}" wx:key src="{{defaultLogo}}" mode="widthFix"
+                        style="width:64rpx;height:64rpx"></image>                        
+                    </view> -->
                     <view class="cu-avatar-group">
-                        <!-- <view class="cu-avatar round lg"  style="background-image:url(/images/add.png);background-color:#ffffff"></view> -->
-                        <image class="cu-avatar round " wx:for="{{4}}" wx:key src="https://ossweb-img.qq.com/images/lol/web201310/skin/big1000{{index+1}}.jpg"></image>
-                        
-                    </view>
-                    <text class="text-right text-white">4人</text>
-
+                        <view class="cu-avatar round lg block" 
+                        wx:for="{{userDiscountCard.Participators}}" wx:key 
+                        style="background-image:url({{item.headimgurl || defaultLogo}});"></view>
+  </view>
+                    
                 </view>
-                
+                <text class="text-right text-white">{{userDiscountCard.ParticipatorsTotal}}人</text>                    
+            </view>
+            <view class="padding">                
                 <view class="">
-                    <button class="cu-btn round bg-green text-white margin-right-xs ">邀请好友</button>
-                    <button class="cu-btn round bg-green text-white">海报</button>
+                    <button class="cu-btn round bg-green text-white" wx:if="{{userDiscountCard.owner_headimgurl}}">邀请好友</button>
+                    <button class="cu-btn round bg-green text-white" wx:else
+                    open-type='getUserInfo' lang="zh_CN" bindgetuserinfo="onGotUserInfo">获取头像/邀请好友</button>
+                    <!-- <button class="cu-btn round">获取头像</button> -->
+                    <!-- <button class="cu-btn round bg-green text-white">海报</button> -->
                 </view>
             </view>
         </view>
@@ -133,7 +140,7 @@
           
             <view class="cu-bar   ">
                 <view class="action ">
-                    <text class="" wx:if="{{isHasDiscountCard}}">任务剩余：1次</text>                 
+                    <text class="" wx:if="{{isHasDiscountCard}}">任务剩余：{{userDiscountCard.left_objective_count}}次</text>                 
                     <text class="" wx:else>先享卡优惠</text>     
 
                 </view>
